<resources>
    <string name="app_name">AndroidCourses</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_out">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="phone">Телефон</string>
    <string name="name">Имя</string>
    <string name="invalidName">Имя слишком короткое</string>
    <string name="invalidPhone">Некорректный номер</string>
    <string name="invalidEmail">Некорректный email</string>
    <string name="profile">Профиль</string>
    <string name="register">Регистрация</string>
    <string name="login">Вход</string>
    <string name="invalid_password">Пароль слишком короткий</string>
    <string name="messages">Сообщения</string>
    <string name="hint_enter_a_message">Введите текст</string>
    <string name="title_activity_maps">Карта</string>
</resources>
