<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/title_activity_maps" />

        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_account_circle"
            android:visible="false"
            android:title="@string/sign_in" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/sign_out" />
    </group>
</menu>